modified commandresults to always contain a list of the currently active turtles